Refactored Save Changes. Fixed not visible button Save Changes after added new item.

--- a/style/style.css
+++ b/style/style.css
@@ -109,7 +109,7 @@ body {
 }
 
 .show-control-buttons {
-    height: 80px;
+    height: 120px;
     transform: scale(1);
     transform-origin: 0 0;
 
